--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "scripts": {
-    "demo": "webpack-dev-server --open"
-  },
-  "dependencies": {
-    "@babel/runtime": "7.9.2",
-    "core-js": "3.6.4",
-    "es6-proxy-polyfill": "2.0.1",
-    "immer": "6.0.2",
-    "proxy-polyfill": "0.3.1",
-    "pullstate": "1.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "regenerator-runtime": "0.13.5"
-  },
-  "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.4",
-    "@types/node": "13.9.3",
-    "@types/react": "16.9.25",
-    "@types/react-dom": "16.9.5",
-    "babel-loader": "8.1.0",
-    "css-loader": "3.4.2",
-    "html-webpack-plugin": "4.0.1",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.1.3",
-    "ts-loader": "6.2.2",
-    "typescript": "3.8.3",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
-  }
+    "scripts": {
+        "start": "webpack-dev-server --open"
+    },
+    "dependencies": {
+        "@babel/runtime": "7.9.2",
+        "core-js": "3.6.4",
+        "es6-proxy-polyfill": "2.0.1",
+        "immer": "6.0.2",
+        "proxy-polyfill": "0.3.1",
+        "pullstate": "1.7.2",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "regenerator-runtime": "0.13.5"
+    },
+    "devDependencies": {
+        "@babel/core": "7.9.0",
+        "@babel/plugin-transform-runtime": "7.9.0",
+        "@babel/preset-env": "7.9.0",
+        "@babel/preset-react": "7.9.4",
+        "@types/node": "13.9.3",
+        "@types/react": "16.9.25",
+        "@types/react-dom": "16.9.5",
+        "babel-loader": "8.1.0",
+        "css-loader": "3.4.2",
+        "html-webpack-plugin": "4.0.1",
+        "source-map-loader": "0.2.4",
+        "style-loader": "1.1.3",
+        "ts-loader": "6.2.2",
+        "typescript": "3.8.3",
+        "webpack": "4.42.1",
+        "webpack-cli": "3.3.11",
+        "webpack-dev-server": "3.10.3"
+    }
 }
